--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
-    <body>
+    <body style="background-image: url(assets/images/Crystal_Background.jpg)"> 
             <div class="container">
                 <div class="row">
                     <div class="col-sm-3">
